CICO-5783 fixing text alignment in checkout later options

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -1814,6 +1814,12 @@ body > div[ng-view] {
 
 
 
+.col-md-6.headtext.centeralign.extra-head-pad{
+
+padding-left: 30px;
+padding-right: 30px;
+
+}
 
 .row .applycharge {
 
